Add Curse of Arrav boss death area